# src/main/resources/api/openapi.yaml
@@ -175,6 +175,8 @@ components:
         user:
           type: string
           format: uuid
+        username:
+          type: string
         user_role:
           $ref: '#/components/schemas/UserRole'
     UserRole:
@@ -831,7 +833,33 @@ paths:
         '404':
           description: Given Dataset ID doesn't exist
           content: { }
-
+  /datasets/{dataset_id}/permissions:
+    get:
+      tags:
+        - Dataset
+      summary: Returns a dataset permissions
+      description: Returns the dataset permissions of given datasetId
+      operationId: getDatasetPermissionsById
+      parameters:
+        - name: dataset_id
+          in: path
+          description: Dataset Identifier
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DatasetRoleDto'
+        '404':
+          description: Given Dataset ID doesn't exist
+          content: { }
   /tasks:
     get:
       tags:
